--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>testcontainers-bom</artifactId>
-        <version>1.18.0</version>
-        <scope>import</scope>
-      </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
@@ -47,6 +41,8 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>redpanda</artifactId>
+      <version>1.18.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
